[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Game engine
bevy = "0.10"
# Hexagons
hexx = "0.6"

# Rng
[dependencies.rand] 
version = "0.8"
features = ["small_rng"]

# Debug
[dependencies.bevy-inspector-egui]
version = "0.18"
optional = true
