[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Game engine
bevy = "0.10"
# Hexagons
hexx = "0.6"
# GUI
bevy_egui = "0.20"

# Rng
[dependencies.rand] 
version = "0.8"
features = ["small_rng"]

# Debug
[dependencies.bevy-inspector-egui]
version = "0.18"
optional = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
