[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Hexagons
hexx = "0.6"
# GUI
bevy_egui = "0.20"

# Game engine
[dependencies.bevy]
version = "0.10"
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_sprite", "bevy_core_pipeline", "bevy_asset", "bevy_winit"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.10"
default-features = false
features = ["bevy_render", "bevy_pbr", "bevy_sprite", "bevy_core_pipeline", "bevy_asset", "bevy_winit", "x11"]

# Rng
[dependencies.rand] 
version = "0.8"
features = ["small_rng"]

# Debug
[dependencies.bevy-inspector-egui]
version = "0.18"
optional = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
lto = "thin"
